Style current selection as black & fix ToC alignment

--- a/cfgov/unprocessed/apps/research-reports/css/main.less
+++ b/cfgov/unprocessed/apps/research-reports/css/main.less
@@ -22,12 +22,12 @@
   height: 100%;
   & > ul {
     a {
-      padding-left: 0.75em;
+      padding-left: 1.85em;
+      text-indent: -1.1em;
     }
   }
-  .m-nav-link.current-section {
-    color: #101820;
-    border-color: #20aa3f;
+  h3, h4 {
+    padding-left: 19px;
   }
   .o-secondary-navigation_list__children {
     display: none;
